Fix expansion of EditableList to not fit on page on mobile

--- a/mbf-site/src/css/App.css
+++ b/mbf-site/src/css/App.css
@@ -34,6 +34,7 @@ h1:hover > .title {
 
 .main {
     display: flex;
+    overflow-x: hidden;
     flex-direction: column;
     align-items: center;
     justify-content: first baseline;
